# cbp-experiments

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
benchmarks/: .gitignore
benchmarks/leela/: config.json
benchmarks/spec-int-2017-rate/: config.json
benchmarks/spec-int-2017-rate-o3/: config.json
benchmarks/spec-int-2017-rate-o3-lto/: config.json
benchmarks/test/: config.json
configs/: firestorm.toml
dynamorio/: CMakeLists.txt  README.md  brtrace.c  common.h  trace_info.cpp  utils.c  utils.h
predictors/AndreSeznec-ITTAGE-64KB/: predictor.h
predictors/AndreSeznec-TAGE-Cookbook/: predictor.h
predictors/AndreSeznec-TAGE-SC-192KB/: my_cond_branch_predictor.h
predictors/AndreSeznec-TAGE-SC-L-64KB/: predictor.h
predictors/AndreSeznec-TAGE-SC-L-64KB-Only-TAGE/: predictor.h
predictors/AndreSeznec-TAGE-SC-L-8KB/: predictor.h
predictors/AndreSeznec-TAGE-SC-L-8KB-Only-TAGE/: predictor.h
predictors/AndreSeznec-Unlimited/: predictor.h
predictors/ffi/: interface.cpp  interface.h
predictors/wrapper/: andre_seznec_ittage_64kb.cpp  andre_seznec_ittage_64kb.h  andre_seznec_tage_cookbook.cpp  andre_seznec_tage_cookbook.h  andre_seznec_tage_sc_192kb.cpp  andre_seznec_tage_sc_192kb.h  andre_seznec_tage_sc_l_64kb.cpp  andre_seznec_tage_sc_l_64kb.h  andre_seznec_tage_sc_l_64kb_only_tage.cpp  andre_seznec_tage_sc_l_64kb_only_tage.h  andre_seznec_tage_sc_l_8kb.cpp  andre_seznec_tage_sc_l_8kb.h  andre_seznec_tage_sc_l_8kb_only_tage.cpp  andre_seznec_tage_sc_l_8kb_only_tage.h  andre_seznec_unlimited.cpp  andre_seznec_unlimited.h  conditional_branch_predictors.h  ideal_cbp.cpp  ideal_cbp.h  ideal_ibp.cpp  ideal_ibp.h  indirect_branch_predictors.h  interface.cpp  interface.h  predictors.h  utils.h
reports/: predictors.md  spec-int-2017-rate-o3.md  spec-int-2017-rate.md
spec2017/: .gitignore  README.md  build.perl  run.sh
src/: lib.rs  path.rs  simpoint.rs  simulate.rs  tage.rs  trace.rs  utils.rs
tracers/: README.md  build.sh  run.sh
tracers/common/: common.h
tracers/dynamorio/: CMakeLists.txt  README.md  brtrace.c  handlers.h
tracers/intel-pt/: .gitignore  README.md  dump-vdso.c  trace.py
tracers/pin/: .gitignore  README.md  brtrace.cpp  makefile
