[package]
name = "cbp-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
capstone = { version = "0.13.0", features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
cli-table = "0.5.0"
cxx = "1.0.156"
indicatif = "0.17.11"
object = "0.36.7"
zstd = "0.13.3"

[build-dependencies]
cxx-build = "1.0.156"
