[package]
name = "cbp-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
capstone = { version = "0.13.0", features = ["full"] }
clap = { version = "4.5.35", features = ["derive"] }
cli-table = "0.5.0"
cxx = "1.0.156"
indicatif = "0.17.11"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
matplotlib = "0.2.0"
ndarray = "0.15.6"
object = "0.36.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zstd = "0.13.3"

[build-dependencies]
cxx-build = "1.0.156"
