[package]
name = "cbp-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
addr2line = "0.24.2"
anyhow = "1.0.97"
bitvec = "1.0.1"
capstone = { version = "0.13.0", features = ["full"] }
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
cli-table = "0.5.0"
cxx = "1.0.156"
env_logger = "0.11.8"
indicatif = "0.17.11"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
log = "0.4.27"
matplotlib = "0.2.0"
memmap = "0.7.0"
ndarray = "0.15.6"
object = "0.36.7"
pathdiff = "0.2.3"
resolve-path = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
size = "0.5.0"
skim = "0.16.1"
tempfile = "3.20.0"
toml = "0.9.7"
zstd = "0.13.3"

[build-dependencies]
cxx-build = "1.0.156"
